crates/adamas-elab/tests/snapshots/rendering__a_long_line_is_shown_by_a_window.snap
---
source: crates/adamas-elab/tests/rendering.rs
expression: refusal(&text)
---
проба.adamas:10:7: имя `nope` не найдено
  big = nope Zero Zero Zero Zero Zero Zero Zero Zero Zero Zero Zero Zero Zero Zero Zero Zero Zero Zero...
        ^^^^
