crates/adamas-elab/tests/snapshots/rendering__a_refusal_inside_a_clause_names_the_field.snap
---
source: crates/adamas-elab/tests/rendering.rs
expression: shown
---
проба.adamas:11:14: несовпадение типов: ожидался `Bool`, получен `Nat`
  f (Succ k) = k
               ^
  в контексте:
    (ω k : Nat)
