crates/adamas-elab/tests/snapshots/rendering__a_refusal_inside_a_clause_shows_the_route.snap
---
source: crates/adamas-elab/tests/rendering.rs
expression: refusal(&text)
---
проба.adamas:11:14: несовпадение типов: ожидался `Bool`, получен `Nat`
  f (Succ k) = k
               ^
  в контексте:
    (ω #1 : Nat)
    (ω k : Nat)
  путь: тело `f` -> тело лямбды -> ветвь #1 -> тело лямбды
