crates/adamas-elab/tests/snapshots/rendering__a_type_mismatch_names_its_variables.snap
---
source: crates/adamas-elab/tests/rendering.rs
expression: refusal(&text)
---
проба.adamas:13:9: несовпадение типов: ожидался `Bool`, получен `Even n`
  f n e = e
          ^
  в контексте:
    (0 n : Nat)
    (e : Even n)
