crates/adamas-elab/tests/snapshots/rendering__holes_are_numbered_from_zero_in_every_message.snap
---
source: crates/adamas-elab/tests/rendering.rs
expression: alone
---
проба.adamas:3:5: ожидался тип, получено `Q{?0, ?1}` типа `(0 _ : Type ?0) -> {| ?2} Type ?1`
  f : Q -> Q
      ^
  путь: тип `f`
