crates/adamas-elab/tests/snapshots/rendering__refusals_about_ownership_read_as_sentences.snap
---
source: crates/adamas-elab/tests/rendering.rs
expression: "shown.join(\"\\n\\n\")"
---
проба.adamas:14:11: `theFile` объявлен типом с владением (resource): держать его может только связывание кратности 1
  theFile : File
            ^^^^

проба.adamas:14:8: связывание resource-типа не может быть ω: значений такого типа при ω не существует
  use : (ω h : File) -> Bool
         ^

проба.adamas:11:10: `drop` для `Socket` обязан брать один `Socket` кратности 1 и отдавать тип, от него не зависящий и сам не владеемый
    drop : Socket -> Socket
           ^^^^^^^^^^^^^^^^

проба.adamas:17:3: `drop` уже принадлежит `File`: имя деструктора одно на модуль, и двух ресурсных типов рядом не бывает
    drop (Conn b) = True
    ^^^^^^^^^^^^^^^^^^^^
