crates/adamas-elab/tests/snapshots/rendering__the_caret_is_measured_in_characters.snap
---
source: crates/adamas-elab/tests/rendering.rs
expression: "refusal(\"data Число where\\n  Ноль : Число\\n\\nf : Число Число\\n\")"
---
проба.adamas:4:5: ожидалась функция, получено значение типа `Type`
  f : Число Число
      ^^^^^^^^^^^
  путь: тип `f`
